@startuml

note "简单工厂的变体,如果系统仅仅只有一个具体的产品,\n就不需要抽象产品角色了" as  N
Creator .. N
ConcreteProduct <.. Creator: 创建

class Creator{
+ConcreteProduct factory()
}



note "工厂模式的变体: 工厂角色,抽象产品角色,\n具体产品角色都是这一个类.即: 自己时自己的工厂类" as  N2
TrinitySimpleFactory .. N2
TrinitySimpleFactory <..TrinitySimpleFactory:创建

class TrinitySimpleFactory{
+TrinitySimpleFactory factory()
}

@enduml